# histProfiler2

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  profiler.cpp  profiler.h
docs/: Presentation1.pptx
histProfiler/: histogram.h  profiler.cpp  profiler.h  profilerApi.h  shmFile.h  shmManager.cpp  shmManager.h  utils.H  utils.h
pythonVisualiser/: displayHist.py  displayHist2.py
tests/: CMakeLists.txt  histVerificator.cpp  histVerificator.h  test_interface.cpp  test_micros.cpp  test_millis.cpp  test_threads.cpp
